# ERP-1

./: README.md  main.py  pyproject.toml
notebooks/: Unit_01_EEG_Basics_and_MNE_Structure.ipynb  Unit_02_EEG_Preprocessing_Basics.ipynb  Unit_03_ERP_Analysis.ipynb  Unit_04_Time_Frequency_Analysis.ipynb  Unit_05_Complete_Workflow_with_mne_sample_data.ipynb
notes/: Quality_Review.md  WTConv.ipynb  apply_baseline.ipynb  multitaper_wavelet.ipynb  permutation_cluster_test.ipynb
